--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,25 @@
   box-sizing: border-box;
 }
 
+.timer {
+  color: white;
+  font-size: 38px;
+  font-weight: 500;
+}
+
+.start-button {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  font-size: 18px;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.7);
+  border: solid 2px rgb(203 213 225);
+  border-radius: 4px;
+  box-shadow: -3px 4px 0 #333;
+}
+
 ul {
   display: flex;
   list-style: none;
