--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,7 +21,7 @@
   padding-right: 16px;
   font-size: 18px;
   font-weight: 500;
-  color: rgba(0, 0, 0, 0.7);
+  color: white;
   border: solid 2px rgb(203 213 225);
   border-radius: 4px;
   box-shadow: -3px 4px 0 #333;
