--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,8 @@
 
 .timer {
   color: white;
-  font-size: 38px;
+  font-family: 'Oxanium', cursive;
+  font-size: 42px;
   font-weight: 500;
 }
 
@@ -19,7 +20,8 @@
   padding-bottom: 8px;
   padding-left: 16px;
   padding-right: 16px;
-  font-size: 18px;
+  font-family: 'Oxanium', cursive;
+  font-size: 20px;
   font-weight: 500;
   color: white;
   border: solid 2px rgb(203 213 225);
