--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,6 +34,15 @@
   box-shadow: inset -4px 4px 0 #222;
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+}
+
 ul {
   display: flex;
   list-style: none;
