--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,7 +74,7 @@
   transition: ease 0.2s;
 }
 
-.noselect {
+.no-select {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
