chore: class rename

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 
-.settings-title {
+.title {
   font-size: 36px;
   font-family: 'Oxanium', cursive;
   color: white;
