--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,6 +43,7 @@ td {
 
 .button {
   max-width: 250px;
+  min-width: fit-content;
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 16px;
