--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,6 +35,51 @@
     --color-pointerout: #1982c4;
     --color-pointerin: #6a4c93;
   }
+
+  .theme-nature {
+    --color-pinky: #31572c;
+    --color-ring: #386641;
+    --color-middle: #4f772d;
+    --color-pointerout: #90a955;
+    --color-pointerin: #ecf39e;
+  }
+}
+
+.radio-item {
+  background-color: white;
+  width: 20px;
+  height: 20px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  border-radius: 100%;
+  box-shadow: 0 2px 10px #424040;
+  cursor: pointer;
+}
+
+.radio-item:hover {
+  background-color: #15803d;
+}
+
+.radio-item:focus {
+  box-shadow: 0 0 0 1px #1a1a1a;
+}
+
+.radio-indicator {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.radio-indicator:after {
+  content: '';
+  display: block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #22c55e;
 }
 
 * {
